# digital-identity-protection-system

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: beta_feedback.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
.github/workflows-disabled/: ci.yml.disabled
config/: defaults.json  example.config.json
dips/: __init__.py  __main__.py  demo_mode.py
dips/cli/: __init__.py  main.py
dips/core/: __init__.py  config.py  (+7 more)
docs/: README.md  architecture-diagram.mmd  architecture.md  cli.md  development-phases-diagram.mmd  development-phases.md  faq.md  features.md  gui.md  installation.md  module-development.md  operations.md  plugins.md  project-profile.md  quickstart.md  releasing.md  reports.md  roadmap.md  security-philosophy.md  troubleshooting.md
downloads/: README.md  SHA256SUMS.txt  dips_0.1.1_all.deb
examples/: README.md
plugins/: README.md
screenshots/: README.md  capture_dashboard_assets.py  generate_repo_typing_animation.py
scripts/: build_deb.py  build_user_guide_pdf.py
tests/: conftest.py  test_ai_security_analysis.py  test_breach_intelligence.py  test_browser_audit.py  test_cli.py  test_config.py  test_context.py  test_credential_hygiene.py  test_demo_mode.py  test_email_phishing.py  test_engine.py  test_event_timeline.py  test_gui_state.py  test_gui_window.py  test_identity_exposure.py  test_paths.py  test_plugin_system.py  test_privacy_risk.py  test_reporting.py  test_risk_engine.py  test_scoring.py  test_threat_intelligence.py  test_ui_dashboard.py
(+86 files in other folders)
